ADD: standardize errors response, update tests, add swagger documentation
